bin/testsuite/tests/compiler/src/errors/compiler5071.swg
#global testerror "Err0742"
#test
{
    const X = true
    var x   = X[0 to 4]
}
